# Tractor-Crisp

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.work  LICENSE  README.md  crisp-bwrap.toml.example  crisp.toml.example  gepa_setup_initial.sh  gepa_setup_rerun.sh  pyproject.toml  requirements.txt
.cargo/: config.toml
converted_rust_projects/: .gitignore  README.md
crisp/: __main__.py  agent.py  analysis.py  config.py  error.py  gepa_po.py  gepa_run.py  git.py  history.py  inline_errors.py  llm.py  mvir.py  safety_history.py  util.py  work_container.py  work_dir.py  workflow.py
gepa_artifacts/: 20260209_2_gptoss20b_gpt5.txt  README.md  seed_prompt.txt
scripts/: cargo-docker-clean.sh  expt_gepa.py  (+14 more)
tools/: Cargo.toml  install-all.sh  rust-toolchain.toml
tools/find_unsafe/: Cargo.toml
tools/find_unsafe/src/: main.rs  test_funcs.rs  test_macros.rs  test_statics.rs
tools/find_unsafe2/: Cargo.toml
tools/find_unsafe2/cargo_subcommands/: Cargo.toml
tools/find_unsafe2/cargo_subcommands/src/: lib.rs
tools/find_unsafe2/cargo_subcommands/tests/: example.rs
tools/find_unsafe2/example-new/src/: lib.rs
tools/find_unsafe2/example-old/: Cargo.toml
tools/find_unsafe2/example-old/src/: lib.rs
tools/find_unsafe2/src/: lib.rs  mir_visitor.rs
tools/find_unsafe2/tests/: example.rs
tools/find_unsafe2/tests/snapshots/: example__run_example.snap
tools/merge_rust/: Cargo.toml
tools/merge_rust/src/: main.rs
tools/merge_rust/tests/: golden.rs
tools/merge_rust/tests/golden/add_module/: snippets.json
tools/merge_rust/tests/golden/add_module/good/: lib.rs  submod.rs
tools/merge_rust/tests/golden/add_module/input/: lib.rs
tools/merge_rust/tests/golden/add_remove/: snippets.json
tools/merge_rust/tests/golden/add_remove/good/: lib.rs
tools/merge_rust/tests/golden/inline_module/: snippets.json
tools/merge_rust/tests/golden/inline_module/good/: lib.rs
tools/merge_rust/tests/golden/inline_module/good/foo/: bar.rs
tools/merge_rust/tests/golden/inline_module/input/: lib.rs
tools/merge_rust/tests/golden/inline_module/input/foo/: bar.rs
tools/merge_rust/tests/golden/update/: snippets.json
tools/merge_rust/tests/golden/update/good/: lib.rs
tools/related_decls/: Cargo.toml
tools/related_decls/example-input/: Cargo.toml
tools/related_decls/example-input/src/: main.rs
tools/related_decls/src/: main.rs
tools/related_decls/src/snapshots/: related_decls__test__all.snap  related_decls__test__crate_root.snap  related_decls__test__item_paths.snap
tools/remove_empty_mods/: Cargo.toml
tools/remove_empty_mods/src/: main.rs
tools/remove_empty_mods/src/snapshots/: remove_empty_mods__test__example1-2.snap  remove_empty_mods__test__example1.snap
tools/rust_analyzer_ext/: Cargo.toml
tools/rust_analyzer_ext/src/: crates.rs
tools/rust_util/: Cargo.toml
tools/rust_util/src/: collect.rs  item_span.rs  lib.rs  mod_path.rs  rewrite.rs
tools/split_ffi_entry_points/: Cargo.toml
tools/split_ffi_entry_points/src/: main.rs
tools/split_rust/: Cargo.toml
tools/split_rust/src/: main.rs
(+66 files in other folders)
