[project]
name = "crisp"
version = "0.1.0"
requires-python = "==3.14.*" # pygit2 doesn't have prebuilts for 3.15 yet.
dependencies = [
    "cbor>=1.0.0",
    "docker>=7.1.0",
    "pathspec>=1.0.4",
    "pygit2>=1.19.0",
    "requests>=2.32.5",
    "toml>=0.10.2",
]

[project.optional-dependencies]
gepa = [
    "gepa>=0.1.1",
    "litellm>=1.83.14",
    "pandas>=3.0.2"
]

[project.scripts]
crisp = "crisp.__main__:main"

[tool.setuptools.packages.find]
include = ["crisp*"]

[tool.setuptools.package-data]
"crisp" = ["prompts/*.md"]
"crisp.agent" = ["codex/*.md", "codex/*.toml"]

[tool.uv]
package = true
