[package]
name = "related_decls"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true

ra_ap_hir.workspace = true
ra_ap_hir_def.workspace = true
ra_ap_ide_db.workspace = true
ra_ap_load-cargo.workspace = true
ra_ap_project_model.workspace = true
ra_ap_syntax.workspace = true
ra_ap_vfs.workspace = true

env_logger.workspace = true
serde_json.workspace = true
itertools.workspace = true
