[package]
name = "split_ffi_entry_points"
version.workspace = true
edition.workspace = true

[dependencies]
rust_util.workspace = true

syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
clap.workspace = true

ra_ap_base_db.workspace = true
ra_ap_hir.workspace = true
ra_ap_ide_db.workspace = true
ra_ap_load-cargo.workspace = true
ra_ap_project_model.workspace = true
ra_ap_syntax.workspace = true
